# ev-dispatch

./: .gitignore  README.md  main.py  pyproject.toml
src/ev_dispatch/: __init__.py  adp.py  baseline.py  ev_asset.py  evaluation.py  fleet.py  helpers.py  price_process.py  value_function.py
src/scripts/: run_adp.py  validate_environment.py
tests/: test_adp.py  test_ev_asset.py  test_fleet.py  test_price_process.py
