
[project]
name = "ev-dispatch"
version = "0.1.0"
description = "ADP-based EV fleet dispatch prototype"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ev_dispatch"]