
[project]
name = "ev-dispatch"
version = "0.1.0"
description = "ADP-based EV fleet dispatch prototype"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "matplotlib>=3.8",
    "plotly>=6.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ev_dispatch"]

[tool.ruff]
lint.select = ["E", "F", "I"]  # Eenable pycodestyle (E), pyflakes (F), isort (I)
lint.ignore = ["E501"]  # Ignoring since black already enforces line length on code. Avoids errors on docs
fix = true                # Automatically apply fixes

[dependency-groups]
dev = [
    "black>=26.3.1",
    "ruff>=0.15.10",
]
